<resources>
    <string name="app_name">Smart Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="todo">TODO</string>
    <string name="day_night_image">day/night_image</string>
    <string name="change">Change</string>
    <string name="suggestions">Suggestions</string>
    <string name="ai_suggestion">Try turning off the AC</string>
    <string name="temp_30">Temp: 30</string>
    <string name="power">POWER</string>
    <string name="status">STATUS</string>
    <string name="cost">COST</string>
    <string name="user_name">User name</string>
    <string name="user_info">User info</string>
    <string name="connect">Connect</string>
    <string name="usage_history">Usage History</string>
    <string name="communicate">Communicate</string>
    <string name="bills">Bills</string>
    <string name="settings">Settings</string>

    <string name="high_usage_alert_notification_title_template">High usage alert: %1$s</string>

    <string name="channel_name_1">High Usage Alert</string>
    <string name="channel_description_1">Notifies Whenever High usage is measured</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_Caps">SETTINGS</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="create">CREATE</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">logout</string>
    <string name="profile_pic">profile pic</string>
    <string name="new_username">New Username</string>
    <string name="new_profile_picture">New profile picture</string>

    <string name="division_select">Choose Division of time</string>
    <string name="choose_date">Choose date</string>
    <string name="confirm_date">Confirm date</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="_0_kwh">0 kwh</string>
    <string name="reset">reset</string>
    <string name="choose_time">choose time</string>
    <string name="show_graph">Show Graph</string>
    <string-array name="time_division">
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
</resources>
