<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile_settings">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:contentDescription="@string/new_profile_picture"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/current_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button_transparent"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textSize="32sp" />


    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/new_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:inputType="text"
        tools:targetApi="o" />
    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_profile_picture"
        android:textSize="24sp" />

    <Button
        android:id="@+id/choose_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Choose" />

    <Button
        android:id="@+id/change_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/change" />


</LinearLayout>