<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/day_night_image"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:contentDescription="@string/day_night_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_night" />

    <Button
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/round_button_transparent"
        android:clickable="false"
        android:text="@string/temp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/day_night_image" />

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_button_transparent"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/day_night_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/DataCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_night_image"
        app:layout_goneMarginRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ai_suggestions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/round_button_transparent"
                android:text="@string/ai_suggestion"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textIsSelectable="true"
                android:textSize="24sp"
                app:autoSizeTextType="uniform" />

            <Button
                android:id="@+id/power_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/ai_suggestions"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_button_transparent"
                android:drawableEnd="@drawable/icon_electricity"
                android:text="@string/power"
                android:textAlignment="inherit"
                app:layout_constraintStart_toEndOf="@+id/ai_suggestions"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/status_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/ai_suggestions"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/power_button"
                android:background="@drawable/round_button_transparent"
                android:drawableEnd="@drawable/icon_status"
                android:text="@string/status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/cost_button"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_below="@+id/ai_suggestions"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/status_button"
                android:background="@drawable/round_button_transparent"
                android:drawableEnd="@drawable/icon_cost"
                android:text="@string/cost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/power_button" />

            <TextView
                android:id="@+id/power"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@+id/power_button"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_button"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/status"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@+id/status_button"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/power"
                android:background="@drawable/border_button"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="81dp"
                tools:layout_editor_absoluteY="87dp" />

            <TextView
                android:id="@+id/cost"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_below="@+id/cost_button"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/status"
                android:background="@drawable/border_button"
                android:textAlignment="center"
                android:textSize="24sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/history_graph"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DataCardview" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_transparent"
        android:drawableEnd="@android:drawable/ic_delete"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_graph" />

    <Button
        android:id="@+id/current_usage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_button_transparent"
        android:text="@string/_0_kwh"
        app:layout_constraintBottom_toTopOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="@+id/day_night_image" />

</androidx.constraintlayout.widget.ConstraintLayout>